<resources>
    <string name="app_name">Samarahan Viral</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_officer">Add new officer</string>
    <string name="no_result">No Result</string>
    <string name="action_search">Search</string>
    <string name="assign_officer">Assign New Officer to event</string>
    <string name="no_bookmark">No bookmark yet </string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_password_again">Confirm Password</string>
    <string name="form_login">Login</string>
    <string name="form_reset">Send Password Reset Link</string>
    <string name="form_register">Register</string>
    <string name="form_next">Next</string>
    <string name="form_no_account">Don\'t have an account ?</string>
    <string name="form_forgot_password">Forgot your password ?</string>
    <string name="form_back_to_login">Back to login</string>
    <string name="confirm_password">Password again</string>
    <string name="form_have_account">Already have an account ? </string>
    <string name="form_email">Email</string>
    <string name="form_input_email">Please key in your login email</string>
    <string name="form_phone">Contact No.</string>
    <string name="form_logout">Log Out</string>
    <string name="no_content">No Content</string>
    <string name="logging_in">Logging in </string>
    <string name="form_more_info1">Few more information before proceed </string>
    <string name="form_more_info">Help us know you a little more </string>
    <string name="form_address_line_1">Address line 1</string>
    <string name="form_address_line_2">Address line 2</string>
    <string name="form_mobile">Mobile No </string>
    <string name="form_dob">Date of Birth</string>
    <string name="form_city">City</string>
    <string name="form_state">State</string>
    <string name="form_postcode">Postcode</string>
    <string name="form_country">Country</string>
    <string name="form_gender">Gender</string>
    <string name="form_male">Male</string>
    <string name="form_female">Female</string>
    <string name="form_register_detail">Registration Details</string>
    <string name="register_events_term">I agree that Event Management may share my information with the event organizer.</string>
    <string name="google_api_keys">AIzaSyA4KRaLDjefODrcg1zFXVS2RhB54vetOx8</string>
    <string name="title_feed">Feed</string>
    <string name="title_Message">Message</string>
    <string name="title_Profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_account">My Account</string>
    <string name="title_history">My History</string>
    <string name="title_my_wish">Wish List</string>
    <string name="title_info">App Info</string>
    <string name="title_bookmark">My Bookmark</string>
    <string name="title_event">My Event</string>
    <string name="title_add_event">New Event</string>
    <string name="title_task">My Task</string>
    <string name="title_joined_event">My Joined Event</string>
    <string name="title_account_section">Section </string>
    <string name="title_category">Please pick a category </string>
    <string name="title_marketplace">Marketplace</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="view_history">View your history</string>
    <string name="log_out">Log Out</string>
    <string name="view_event">View your event</string>
    <string name="about_app">About Us</string>
    <string name="add_event">Add new event</string>
    <string name="view_task">View your task</string>
    <string name="view_bookmark">View your bookmarks</string>
    <string name="view_account">View your account</string>
    <string name="logout_label">Logout</string>
    <string name="logout_status">Logout from apps</string>
    <string name="tap_change">Tap to change</string>
    <string name="email_change">Email is not allow to change</string>
    <string name="username_status">Successfully updated your username </string>
    <string name="password_status">Successfully updated your password</string>
    <string name="my_officer">My officer</string>
    <string name="pending_officer">Pending Officer</string>
    <string name="assign_event_officer">Are you sure want to assign this complaint to this officer ?</string>
    <string name="like">Favourite</string>
    <string name="bookmark">Bookmark</string>
    <string name="join">Join</string>
    <string name="interest">Interest</string>
    <string name="comment">Comment</string>
    <string name="status_running">ONGOING</string>
    <string name="status_completed">COMPLETED</string>
    <string name="info_event_label">Categories</string>
    <string name="text_no_vip">No VIP found associate with this email. If you wish to add this VIP, Please click the send Invitation button below.</string>
    <string name="action_send_invite">Send Invitation</string>
    <string name="action_search_result">Search result</string>
    <string name="label_invited_vip">Invited VIP</string>
    <string name="officer_label">Event officer </string>
    <string name="manage_officer">Manage Officer</string>
    <string name="my_account">My Account</string>
    <string name="edit_profile">My Profile</string>
    <string name="support_label">Support </string>
    <string name="apps_info">Apps Info</string>
    <string name="apps_contact">Help Contact</string>
    <string name="logout">Logout</string>
    <string name="setting_label">Setting</string>
    <string name="setting_app_label">App Setting</string>
    <string name="edit_language">Language</string>
    <string name="logout_desc">Are you sure want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="extra_info">Extra Information </string>
    <string name="organiser">Organiser </string>
    <string name="organiser_name">Organiser Name</string>
    <string name="action_enter_comment">Please enter comment here</string>
    <string name="action_send">Send</string>
    <string name="action_more">Feedback</string>
    <string name="btn_edit">Edit post</string>
    <string name="btn_feedback">Feedback</string>
    <string name="btn_view_feedback">View Feedback</string>
    <string name="btn_officer">Assign Officer</string>
    <string name="btn_contact_officer">Contact Officer</string>
    <string name="btn_assign_vip">Invite VIP</string>
    <string name="btn_delete_post">Delete post</string>
    <string name="btn_add_calendar">Add to Calendar</string>
    <string name="btn_joined_events">JOINED</string>
    <string name="btn_join_events">JOIN</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="event_extra">Extra Information (Optional)</string>
    <string name="event_location">Event\'s Location</string>
    <string name="event_images">Event\'s Images</string>
    <string name="pick_images">Choose your event image</string>
    <string name="pick_location">Choose your event venue</string>
    <string name="event_category">Category</string>
    <string name="pick_category">Select your event category</string>
    <string name="event_start">Event start</string>
    <string name="pick_event_start">Event\'s start date</string>
    <string name="event_end">Event end</string>
    <string name="pick_event_end">Event\'s end date</string>
    <string name="event_register_start">Registration start</string>
    <string name="pick_event_start_dateline">Registration start date</string>
    <string name="event_register_end">Registration end</string>
    <string name="pick_event_end_dateline">Registration end date</string>
    <string name="submit">Submit</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Choose from Library</string>
    <string name="add_photo">Add Photo</string>
    <string name="info_title">Information Title</string>
    <string name="info_desc">Information details</string>
    <string name="extra_information">Extra Information</string>
    <string name="information_venue">Information\'s venue</string>
    <string name="pick_info_images">Choose your info image</string>
    <string name="pick_info_location">Choose your info venue</string>
    <string name="info_category">Category</string>
    <string name="pick_info_category">Select your info category</string>
    <string name="choose_posting_type">Choose posting type</string>
    <string name="home_stay">Home Stay</string>
    <string name="food">Food</string>
    <string-array name="events_type">
        <item>Information</item>
        <item>New Events</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="search_person">Search people</string>
    <string name="message_list">Messages</string>
    <string name="my_officer_title">Officer list</string>
    <string name="my_officer_desc">Please click on the top right corner to add new officer. Once officer is added, you have to wait the officer to confirm the request. Officer that is added but do not confirm will fall under Pending officer status</string>
    <string name="dummy">Lorem ipsum is a pseudo-Latin text used in web design,
        typography, layout, and printing in place of English to emphasise design elements over
        content. It\'s also called placeholder (or filler) text. It\'s a convenient tool for
        mock-ups. It helps to outline the visual elements of a document or presentation, eg
        typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical
        author and philosopher Cicero. Its words and letters have been changed by addition or
        removal, so to deliberately render its content nonsensical; it\'s not genuine, correct,
        or comprehensible Latin anymore. While lorem ipsum\'s still resembles classical Latin,
        it actually has no meaning whatsoever. As Cicero\'s text doesn\'t contain the letters K,
        W, or Z, alien to latin, these, and others are often inserted randomly to mimic the
        typographic appearance of European languages, as are digraphs not to be found in the original.
        In a professional context it often happens that private or corporate clients coder a
        publication to be made and presented with the actual content still not being ready.
        Think of a news blog that\'s filled with content hourly on the day of going live.
        However, reviewers tend to be distracted by comprehensible content, say, a random text
        copied from a newspaper or the internet. The are likely to focus on the text,
        disregarding the layout and its elements. Besides, random text risks to be unintended
        humorous or offensive, an unacceptable risk in corporate environments.
        Lorem ipsum and its many variants have been employed since the early 1960ies, and quite
        likely since the sixteenth century.</string>
    <string name="dummy_short">Lorem ipsum is a pseudo-Latin text used in web design,
        typography, layout, and printing in place of English to emphasise design elements over
        content. It\'s also called placeholder (or filler) text. It\'s a convenient tool for
        mock-ups. It helps to outline the visual elements of a document or presentation, eg
        typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical
        author and philosopher Cicero.</string>
    <string name="sample_location">Current Location </string>
    <string name="sample_status">3 Bookmarked Event </string>
</resources>