<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:checkable="true"
        app:showAsAction="ifRoom"
        android:title="@string/submit"
        android:icon="@drawable/baseline_filter_list_black_18"/>

    <item
        android:id="@+id/message"
        android:checkable="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_Message"
        android:icon="@drawable/badge_count"/>

    <item
        android:id="@+id/marketplace"
        android:checkable="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_marketplace"
        android:icon="@drawable/marketplace"/>

</menu>