<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="Your Information"/>

    <EditText
        android:id="@+id/form_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_mobile"
        android:padding="10dp"
        android:background="@drawable/edit_text_box_1"
        android:layout_marginBottom="5dp"
        android:inputType="phone"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textSize="14sp"/>

    <LinearLayout
        android:id="@+id/dob_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box_1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/form_dob" />

        <TextView
            android:id="@+id/dob_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="@string/form_dob"
            android:textAlignment="textEnd" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box_1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/form_gender" />

        <RadioGroup
            android:id="@+id/form_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|end"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/form_male"
                android:checked="true"
                android:hint="@string/form_male"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/form_female"
                android:hint="@string/form_female"/>

        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/form_address_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_address_line_1"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text_box_1"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/form_address_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_address_line_2"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text_box_1"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/form_postcode"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/form_postcode"
            android:maxLines="1"
            android:background="@drawable/edit_text_box_1"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/form_city"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/form_city"
            android:maxLines="1"
            android:background="@drawable/edit_text_box_1"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:padding="10dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/form_country"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/form_country"
            android:maxLines="1"
            android:background="@drawable/edit_text_box_1"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/form_state"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/form_state"
            android:maxLines="1"
            android:background="@drawable/edit_text_box_1"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:padding="10dp"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>