<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kuchingitsolution.asus.eventmanagement.my_account.MyAccountActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorAppsBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.kuchingitsolution.asus.eventmanagement.my_account.MyAccountActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar_layout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarStyle.Event"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ffffff"/>

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
            android:text="@string/my_account"
            android:id="@+id/my_account_label"/>

        <LinearLayout
            android:id="@+id/edit_profile_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/my_account_label"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/black"
                android:text="@string/edit_profile"
                android:drawableEnd="@drawable/baseline_chevron_right_black_18"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_section"
            android:text="@string/officer_label"
            android:id="@+id/add_officer_label"/>

        <LinearLayout
            android:id="@+id/manage_officer_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_officer_label"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manage_officer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/baseline_chevron_right_black_18"
                android:text="@string/manage_officer"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/manage_officer_section"
            android:text="@string/setting_label"
            android:id="@+id/setting_label"/>

        <LinearLayout
            android:id="@+id/setting_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/setting_label"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_setting_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/black"
                android:text="@string/setting_app_label"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/baseline_chevron_right_black_18"
                android:onClick="to_app_setting"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                tools:ignore="OnClick" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/setting_section"
            android:text="@string/support_label"
            android:id="@+id/help_section"/>

        <LinearLayout
            android:id="@+id/support_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/help_section"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/black"
                android:text="@string/apps_info"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/baseline_chevron_right_black_18"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/view_help_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/black"
                android:text="@string/apps_contact"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/baseline_chevron_right_black_18"
                android:visibility="gone"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout_from_app"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@id/support_section"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/mt_red"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>